--- a/templates/default/index.html
+++ b/templates/default/index.html
@@ -1,8 +1,76 @@
-<html>
+<!DOCTYPE html>
 
-<link type="text/css" rel="stylesheet" href="/templates/default/index/css/style.css">
+{% set __default = {
+	title: "ННК «Інститут Прикладного Системного Аналізу»",
+	description: "",
+	keywords: "",
+	geo: {
+		placename: "Київ",
+		position: "0, 0"
+	}
+} -%}
+
+<html lang="">
+
+<head>
+	<base href="http://iasa.zanner.org.ua/" />
+
+	<link type="image/x-icon" href="/templates/default/index/img/favicon.ico" rel="shortcut icon" />
+	<link type="image/x-icon" href="/templates/default/index/img/favicon.ico" rel="icon" />
+	<link href="/templates/default/index/img/apple-favicon.png" rel="apple-touch-icon" />
+	{#- <link type="application/opensearchdescription+xml" href="/search" title="iasa.kpi.ua" rel="search" /> -#}
+	{#- <link type="application/rss+xml" title="iasa.kpi.ua" href="//feeds.feedburner.com/iasa-kpi" rel="alternate" /> -#}
+	<link type="text/css" href="/templates/default/index/css/style.css" media="all" rel="stylesheet" />
+	{#- <link type="text/css" href="/templates/default/index/css/print.css" media="print" rel="stylesheet" /> -#}
+
+	<meta charset="utf-8">
+	<meta http-equiv="Content-Type" content="text/html" />
+	{#- <meta http-equiv="Content-Language" content="uk" /> -#}
+	{#- <meta http-equiv="X-UA-Compatible" content="IE=edge" /> -#}
+
+	<meta name="audience" content="all" />
+	<meta name="author" content="iasa.kpi.ua" />
+	<meta name="copyright" content="iasa.kpi.ua" />
+	<meta name="description" content="{{ description | default(__default.description) }}" />
+	<meta name="distribution" content="global" />
+	<meta name="generator" content="zanner-cms" />
+	{#- <meta name="geo.placename" content="{{ geo_placename | default(__default.geo.placename) }}" /> -#}
+	{#- <meta name="geo.position" content="{{ geo_position | default(__default.geo.position) }}" /> -#}
+	{#- <meta name="ICBM" content="{{ geo_position | default(__default.geo.position) }}" /> -#}
+	<meta name="keywords" content="{{ keywords | default(__default.keywords) }}" />
+	<meta name="language" content="uk" />
+	<meta name="revisit" content="8 days" />
+	<meta name="robots" content="index, follow, all" />
+	{#- <meta name="viewport" content="width=980" /> -#}
+
+	<script type="text/javascript" src="/templates/default/index/js/jquery-1.12.0.min.js"></script>
+	<script type="text/javascript" src="/templates/default/index/js/script.js"></script>
+
+	<title>{{ title | default(__default.title) }}</title>
+</head>
 
 <body>
-ias<b>a</b> ...
+	<header>
+
+	</header>
+	<article>
+		ias<b>a</b> ...
+	</article>
+	<section>
+		<h1>Съёмки фильма Полипропилен</h1>
+		<p>История о том, как снимали фильм, где герои отдыхали на пляже,
+			потом пришёл антагонист, избил протагонистов, сбросил их в бассейн,
+			и что из этого получилось.</p>
+	</section>
+	<section>
+		<h1>Хороший язык</h1>
+		<p>История о том, как проходила студия изучения языка эсперанто,
+			в то время, как над ней, на веранде велась студия приколистов,
+			где травились анекдоты, и что из этого получилось.</p>
+	</section>
+	<footer>
+
+	</footer>
 </body>
+
 </html>
