--- a/templates/default/index.html
+++ b/templates/default/index.html
@@ -4,28 +4,21 @@
 	title: "ННК «Інститут Прикладного Системного Аналізу»",
 	description: "",
 	keywords: "",
+	lang: "uk",
 	geo: {
 		placename: "Київ",
 		position: "0, 0"
 	}
 } -%}
 
-<html lang="">
+<html lang="{{ lang | default(__default.lang) }}">
 
 <head>
-	<base href="http://iasa.zanner.org.ua/" />
-
-	<link type="image/x-icon" href="/templates/default/index/img/favicon.ico" rel="shortcut icon" />
-	<link type="image/x-icon" href="/templates/default/index/img/favicon.ico" rel="icon" />
-	<link href="/templates/default/index/img/apple-favicon.png" rel="apple-touch-icon" />
-	{#- <link type="application/opensearchdescription+xml" href="/search" title="iasa.kpi.ua" rel="search" /> -#}
-	{#- <link type="application/rss+xml" title="iasa.kpi.ua" href="//feeds.feedburner.com/iasa-kpi" rel="alternate" /> -#}
-	<link type="text/css" href="/templates/default/index/css/style.css" media="all" rel="stylesheet" />
-	{#- <link type="text/css" href="/templates/default/index/css/print.css" media="print" rel="stylesheet" /> -#}
+	<!--base href="http://iasa.zanner.org.ua/" /-->
 
 	<meta charset="utf-8">
 	<meta http-equiv="Content-Type" content="text/html" />
-	{#- <meta http-equiv="Content-Language" content="uk" /> -#}
+	{#- <meta http-equiv="Content-Language" content="{{ lang | default(__default.lang) }}" /> -#}
 	{#- <meta http-equiv="X-UA-Compatible" content="IE=edge" /> -#}
 
 	<meta name="audience" content="all" />
@@ -43,8 +36,24 @@
 	<meta name="robots" content="index, follow, all" />
 	{#- <meta name="viewport" content="width=980" /> -#}
 
+	<link type="image/x-icon" rel="shortcut icon" href="/templates/default/index/img/favicon.ico" />
+	<link type="image/x-icon" rel="icon" href="/templates/default/index/img/favicon.ico" />
+	<link rel="apple-touch-icon" href="/templates/default/index/img/apple-favicon.png" />
+	{#- <link type="application/opensearchdescription+xml" rel="search" href="/search" title="iasa.kpi.ua" /> -#}
+	{#- <link type="application/rss+xml" rel="alternate" title="iasa.kpi.ua" href="//feeds.feedburner.com/iasa-kpi" /> -#}
+	<link type="text/css" rel="stylesheet" href="/templates/default/index/css/style.css" media="all" />
+	{#- <link type="text/css" rel="stylesheet" href="/templates/default/index/css/print.css" media="print" /> -#}
+
+	<!-- jquery -->
 	<script type="text/javascript" src="/templates/default/index/js/jquery-1.12.0.min.js"></script>
 	<script type="text/javascript" src="/templates/default/index/js/script.js"></script>
+	<!-- end jquery -->
+
+	<!-- bootstrap 3 -->
+	<link type="text/css" rel="stylesheet" href="/templates/default/bootstrap-3/css/bootstrap.min.css">
+	<link type="text/css" rel="stylesheet" href="/templates/default/bootstrap-3/css/bootstrap-theme.min.css">
+	<script type="text/javascript" src="/templates/default/bootstrap-3/js/bootstrap.min.js"></script>
+	<!-- end bootstrap 3 -->
 
 	<title>{{ title | default(__default.title) }}</title>
 </head>
