--- a/templates/default/index/css/style.css
+++ b/templates/default/index/css/style.css
@@ -1,5 +1,14 @@
 html, body{
-	background-color: transparent;
+	/*background-color: transparent;*/
+	background-image: url("/templates/default/index/img/bg-body-iasa-1.png");
+	background-repeat: repeat-x;
 	margin: 0;
 	padding: 0;
+}
+
+body > header{
+	background-image: url("/templates/default/index/img/bg-header-iasa-1.png");
+	background-position: top center;
+	background-repeat: no-repeat;
+	min-height: 400px;
 }
