--- a/templates/default/index.html
+++ b/templates/default/index.html
@@ -67,28 +67,27 @@
 <body>
 	<div class="page-canvas">
 		<div class="paper-canvas">
+			<nav class="toolbar">
+				<ul id="menu-top" class="nav nav-list">
+					<li><a href="/"><span class="icon-home"></span></a></li>
+					<li class="active"><a href="/about">about</a></li>
+					<li><a href="/news">science</a></li>
+					<li><a href="/education">education</a></li>
+					<li><a href="/newsd">news</a></li>
+				</ul>
+				<ul id="menu-language" class="nav nav-list">
+					<li><a href="http://iasa.kpi.ua">uk</a></li>
+					<li><a href="http://en.iasa.kpi.ua">en</a></li>
+					<li><a href="http://ru.iasa.kpi.ua">ru</a></li>
+				</ul>
+				<form id="search-bar" class="form-search">
+					<input type="hidden" name="s" value="">
+					<input type="text" class="input-medium search-query" name="q" value="" placeholder="search words">
+					<button type="submit" class="btn"><span class="icon-search"></span></button>
+				</form>
+				<div class="clean"></div>
+			</nav>
 			<header>
-				<nav class="toolbar">
-					<ul id="menu-top">
-						<li><a href="/"><span class="icon-home"></span></a></li>
-						<li><a href="/about">about</a></li>
-						<li><a href="/news">science</a></li>
-						<li><a href="/education">education</a></li>
-						<li><a href="/science">science</a></li>
-					</ul>
-					<ul id="menu-language">
-						<li><a href="http://iasa.kpi.ua">uk</a></li>
-						<li><a href="http://en.iasa.kpi.ua">en</a></li>
-						<li><a href="http://ru.iasa.kpi.ua">ru</a></li>
-					</ul>
-					<form id="search-bar">
-						<input type="hidden" name="s" value="">
-						<input type="text" name="q" value="" placeholder="search words">
-						<button type="submit" class="icon-search"></button>
-					</form>
-					<div class="clean"></div>
-				</nav>
-
 			</header>
 			<article>
 				ias<b>a</b> ...
