--- a/templates/default/index/css/style.css
+++ b/templates/default/index/css/style.css
@@ -1,14 +1,13 @@
 html {
+  height: 100%;
   margin: 0;
   padding: 0;
 }
 html > body {
-  background-color: #FFFFFF;
-  background-image: url("/templates/default/index/img/bg-body-iasa-1.png");
-  background-position: center -150px;
-  background-repeat: repeat-x;
+  background: #FFFFFF;
+  background: url("/templates/default/index/img/bg-body-iasa-1.png") center -250px repeat-x;
   margin: 0;
-  min-height: 100%;
+  height: 100%;
   padding: 0;
   position: relative;
 }
@@ -16,7 +15,7 @@ html > body > .page-canvas {
   border: 1px solid green;
 }
 html > body > .page-canvas > .paper-canvas {
-  margin: 0 64px;
+  margin: auto 64px;
 }
 html > body > .page-canvas > .paper-canvas > header {
   background-image: url("/templates/default/index/img/bg-header-iasa-1.png");
@@ -32,10 +31,9 @@ html > body > .page-canvas > .paper-canvas > footer {
   min-height: 100px;
 }
 nav.toolbar {
-  background-color: #d5dced;
-  border-radius: 0 0 8px 8px;
+  background-color: #c9dbf4;
+  border-radius: 0 0 12px 12px;
   font-size: 10pt;
-  padding: 8px 0;
   line-height: 16pt;
 }
 nav.toolbar a {
@@ -60,9 +58,6 @@ nav.toolbar ul {
   list-style: none;
   padding: 0 8px;
 }
-nav.toolbar > * {
-  border: 1px solid red;
-}
 nav.toolbar #menu-top {
   float: left;
 }
@@ -72,23 +67,12 @@ nav.toolbar #menu-language {
 nav.toolbar #search-bar {
   float: right;
 }
-nav.toolbar #search-bar {
-  margin-bottom: 0px;
-}
-nav.toolbar #search-bar input,
-nav.toolbar #search-bar button {
-  font-size: 8pt;
-}
-nav.toolbar #search-bar input {
-  background-color: #ffffff;
+nav.toolbar #search-bar,
+nav.toolbar #search-bar > * {
   border: none;
-  border-radius: 8px;
   margin-bottom: 0px;
-  min-width: 128px;
-}
-nav.toolbar #search-bar button {
-  background-color: transparent;
-  border: none;
+  padding-bottom: 0px;
+  padding-top: 0px;
 }
 nav.toolbar #menu-top-home {
   display: inline-block;
