--- a/templates/default/index.html
+++ b/templates/default/index.html
@@ -11,7 +11,7 @@
 	}
 } -%}
 
-<html lang="{{ lang | default(__default.lang) }}">
+<html lang="{{ lang | default(__default.lang) }}" xmlns="http://www.w3.org/1999/html">
 
 <head>
 	<!--base href="http://iasa.zanner.org.ua/" /-->
@@ -49,7 +49,7 @@
 	<script type="text/javascript" src="/templates/default/index/js/script.js"></script>
 	<!-- end jquery -->
 
-	<!-- bootstrap -->
+	<!-- bootstrap ->
 	<link type="text/css" href="/templates/default/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 	<link type="text/css" href="/templates/default/bootstrap/css/bootstrap-theme.min.css" rel="stylesheet">
 	<script type="text/javascript" src="/templates/default/bootstrap/js/bootstrap.min.js"></script>
@@ -65,50 +65,73 @@
 </head>
 
 <body>
-	<div class="page-canvas">
-		<div class="paper-canvas">
-			<nav class="toolbar">
-				<ul id="menu-top" class="nav nav-list">
-					<li><a href="/"><span class="icon-home"></span></a></li>
-					<li class="active"><a href="/about">about</a></li>
-					<li><a href="/news">science</a></li>
-					<li><a href="/education">education</a></li>
-					<li><a href="/newsd">news</a></li>
-				</ul>
-				<ul id="menu-language" class="nav nav-list">
-					<li><a href="http://iasa.kpi.ua">uk</a></li>
-					<li><a href="http://en.iasa.kpi.ua">en</a></li>
-					<li><a href="http://ru.iasa.kpi.ua">ru</a></li>
-				</ul>
-				<form id="search-bar" class="form-search">
+	<header class="paper-header">
+		<!-- toolbar -->
+		<nav class="toolbar">
+			<section class="language">
+				<a href="http://iasa.kpi.ua" class="active"><span class="icon-lang lang-uk"></span></a>
+				<a href="http://en.iasa.kpi.ua"><span class="icon-lang lang-en"></span></a>
+				<a href="http://ru.iasa.kpi.ua"><span class="icon-lang lang-ru"></span></a>
+			</section>
+			<section class="search">
+				<form class="search-form" action="/search" method="get" enctype="multipart/form-data">
 					<input type="hidden" name="s" value="">
 					<input type="text" class="input-medium search-query" name="q" value="" placeholder="search words">
-					<button type="submit" class="btn"><span class="icon-search"></span></button>
+					<button type="submit" class="btn"><span class="icon-img img-search"></span></button>
 				</form>
-				<div class="clean"></div>
-			</nav>
-			<header>
-			</header>
-			<article>
-				ias<b>a</b> ...
-			</article>
-			<section>
-				<h1>Съёмки фильма Полипропилен</h1>
-				<p>История о том, как снимали фильм, где герои отдыхали на пляже,
-					потом пришёл антагонист, избил протагонистов, сбросил их в бассейн,
-					и что из этого получилось.</p>
 			</section>
-			<section>
-				<h1>Хороший язык</h1>
-				<p>История о том, как проходила студия изучения языка эсперанто,
-					в то время, как над ней, на веранде велась студия приколистов,
-					где травились анекдоты, и что из этого получилось.</p>
+			<section class="menu">
+				<a href="/" class="active"><span class="icon-img img-home"></span></a>
+				<a href="/about">Про ІПСА</a>
+				<a href="/news">Наука</a>
+				<a href="/education">Освіта</a>
+				<a href="/newsd">Новини</a>
 			</section>
-			<footer>
+		</nav>
+		<!-- end toolbar -->
+		<section class="face">
+			<section class="contact">
+				<label>Секретар<span class="phone">222-22-22</span></label>
+				<label>Відбіркова комістя<span class="phone">222-22-22</span></label>
+			</section>
+			<section class="logo-text">
+				<a href="/" class="logo"><img src="/templates/default/index/img/logo.png" alt="logo"></a>
+				<p class="text"><span>Навчально-науковий комплекс</span><span>«Інститут прикладного системного
+				аналізу»</span></p>
+			</section>
+		</section>
+		<section class="banner">
 
-			</footer>
-		</div>
-	</div>
+		</section>
+		<section class="path">
+
+		</section>
+	</header>
+	<section class="paper-content">
+		<section class="main">
+			<article>article-1</article>
+			<article>article-2</article>
+			<article>article-3</article>
+			<article>article-4</article>
+		</section>
+		<section class="menu">
+			<nav>
+				<a href="#">menu-1</a>
+				<a href="#">menu-2</a>
+				<a href="#">menu-3</a>
+				<a href="#">menu-4</a>
+			</nav>
+		</section>
+		<aside>
+			<article>aside-1</article>
+			<article>aside-2</article>
+			<article>aside-3</article>
+			<article>aside-4</article>
+		</aside>
+	</section>
+	<footer class="paper-footer">
+
+	</footer>
 </body>
 
 </html>
