--- a/templates/default/index.html
+++ b/templates/default/index.html
@@ -109,10 +109,12 @@
 	</header>
 	<section class="paper-content">
 		<section class="main">
-			<article>article-1</article>
-			<article>article-2</article>
-			<article>article-3</article>
-			<article>article-4</article>
+			<main>
+				<article>article-1</article>
+				<article>article-2</article>
+				<article>article-3</article>
+				<article>article-4</article>
+			</main>
 		</section>
 		<section class="menu">
 			<nav>
@@ -120,14 +122,17 @@
 				<a href="#">menu-2</a>
 				<a href="#">menu-3</a>
 				<a href="#">menu-4</a>
+				<a href="#">menu-5555555555</a>
 			</nav>
 		</section>
-		<aside>
-			<article>aside-1</article>
-			<article>aside-2</article>
-			<article>aside-3</article>
-			<article>aside-4</article>
-		</aside>
+		<section class="aside">
+			<aside>
+				<article>aside-1</article>
+				<article>aside-2</article>
+				<article>aside-3</article>
+				<article>aside-4</article>
+			</aside>
+		</section>
 	</section>
 	<footer class="paper-footer">
 
