--- a/templates/default/index/css/style.css
+++ b/templates/default/index/css/style.css
@@ -1,5 +1,5 @@
 html {
-  font: normal 14pt/1.4 Helvetica, "Helvetica Neue", Arial, Tahoma, Verdana, monospace;
+  font: normal 14pt/1.4 "Helvetica Neue", Helvetica, Arial, Tahoma, Verdana, monospace;
   height: 100%;
 }
 html,
@@ -11,18 +11,77 @@ body {
   background: #FFFFFF url("/templates/default/index/img/bg-body-iasa-1.png") center -250px repeat-x;
   height: 100%;
 }
+body a {
+  color: #0080ff;
+  text-decoration: none;
+}
 [class^="paper-"] {
+  border: 0px solid violet;
+  overflow: auto;
+  position: relative;
   background-position-x: center;
   background-repeat: no-repeat;
-  border: 1px solid violet;
   margin: auto 64px;
   min-height: 32px;
-  position: relative;
 }
 [class="paper-header"] {
   background-image: url("/templates/default/index/img/bg-header-iasa-1.png");
   background-position-y: bottom;
+  border-bottom: 1px solid #808080;
   min-height: 32px;
+}
+[class="paper-header"] > [class="toolbar"] {
+  background-color: #c9dbf4;
+  border-radius: 0 0 12px 12px;
+  font-size: 75%;
+  align-items: stretch;
+  display: flex;
+  flex-flow: row-reverse wrap;
+  justify-content: space-between;
+}
+[class="paper-header"] > [class="toolbar"] a {
+  padding: 4px 8px;
+}
+[class="paper-header"] > [class="toolbar"] button {
+  background: none;
+  border: none;
+  margin: 4px 2px;
+  vertical-align: text-top;
+}
+[class="paper-header"] > [class="toolbar"] input {
+  border: 1px solid #808080;
+  border-radius: 8px;
+  margin: 2px;
+  padding: 3px 4px 4px;
+  vertical-align: text-top;
+}
+[class="paper-header"] > [class="toolbar"] > [class="menu"],
+[class="paper-header"] > [class="toolbar"] [class="language"],
+[class="paper-header"] > [class="toolbar"] [class="search"] {
+  display: inline-flex;
+  flex-grow: 0;
+  flex-flow: row wrap;
+  justify-content: flex-start;
+  padding: 0 12px;
+}
+[class="paper-header"] > [class="toolbar"] > [class="language"] a:hover {
+  opacity: 0.5;
+}
+[class="paper-header"] > [class="toolbar"] > [class="menu"] a:hover {
+  background-color: #0080ff;
+  color: #ffffff;
+  opacity: 0.5;
+}
+[class="paper-header"] > [class="toolbar"] > [class="language"] {
+  order: 1;
+}
+[class="paper-header"] > [class="toolbar"] > [class="search"] {
+  flex-grow: 1;
+  order: 2;
+  justify-content: flex-end;
+}
+[class="paper-header"] > [class="toolbar"] > [class="menu"] {
+  order: 3;
 }
 [class="paper-header"] .face {
   align-items: center;
@@ -38,11 +97,31 @@ body {
 [class="paper-header"] .face img {
   vertical-align: text-bottom;
 }
+[class="paper-header"] .face .contact {
+  align-items: flex-end;
+  display: flex;
+  justify-content: flex-start;
+  order: 1;
+  flex-grow: 1;
+  flex-flow: column wrap;
+}
+[class="paper-header"] .face .contact label {
+  font-family: Palatino;
+  font-size: 75%;
+  font-style: italic;
+  line-height: 1;
+}
+[class="paper-header"] .face .contact .phone {
+  font-size: 140%;
+  font-style: normal;
+  font-weight: bold;
+  margin-left: 1em;
+}
 [class="paper-header"] .face .logo-text {
   display: flex;
   flex-grow: 0;
-  margin-right: 24px;
   order: 2;
+  margin-right: 24px;
 }
 [class="paper-header"] .face .logo-text .logo {
   margin-right: 16px;
@@ -63,131 +142,74 @@ body {
   font-weight: bolder;
   word-spacing: 4px;
 }
-[class="paper-header"] .face .contact {
-  align-items: flex-end;
-  display: flex;
-  flex-grow: 1;
-  flex-flow: column wrap;
-  justify-content: flex-start;
-  order: 1;
-}
-[class="paper-header"] .face .contact label {
-  font-family: Palatino;
-  font-size: 75%;
-  font-style: italic;
-  line-height: 1;
-}
-[class="paper-header"] .face .contact .phone {
-  font-size: 140%;
-  font-style: normal;
-  font-weight: bold;
-  margin-left: 1em;
-}
 [class="paper-content"] {
-  align-items: flex-start;
   display: flex;
-  flex-flow: row wrap;
-  justify-content: flex-start;
+  flex-flow: row nowrap;
+  margin-bottom: 8px;
+  margin-top: 8px;
 }
-[class="paper-footer"] {
-  background-image: url("/templates/default/index/img/bg-footer-iasa-1.png");
-  background-position-y: top;
-  min-height: 100px;
+@media (max-width: 800px) {
+  [class="paper-content"] {
+    flex-flow: column wrap;
+  }
 }
-[class="paper-header"] > [class="toolbar"] {
-  background-color: #c9dbf4;
-  border-radius: 0 0 12px 12px;
-  font-size: 75%;
-  align-items: stretch;
+[class="paper-content"] > [class="main"],
+[class="paper-content"] > [class="menu"],
+[class="paper-content"] > [class="aside"] {
   display: flex;
-  flex-flow: row-reverse wrap;
-  justify-content: space-between;
 }
-[class="paper-header"] > [class="toolbar"] a {
-  color: #0080ff;
-  padding: 4px 8px;
-  text-decoration: none;
-}
-[class="paper-header"] > [class="toolbar"] button {
-  background: none;
-  border: none;
-  margin: 4px 2px;
-  vertical-align: text-top;
-}
-[class="paper-header"] > [class="toolbar"] input {
-  border: 1px solid #808080;
-  border-radius: 8px;
-  margin: 2px;
-  padding: 3px 4px 4px;
-  vertical-align: text-top;
-}
-[class="paper-header"] > [class="toolbar"] [class="menu"],
-[class="paper-header"] > [class="toolbar"] [class="language"],
-[class="paper-header"] > [class="toolbar"] [class="search"] {
-  display: inline-flex;
+[class="paper-content"] > [class="menu"] {
+  min-width: 80px;
   flex-grow: 0;
-  flex-flow: row wrap;
-  justify-content: flex-start;
-  padding: 0 12px;
-}
-[class="paper-header"] > [class="toolbar"] [class="language"] a:hover {
-  opacity: 0.5;
-}
-[class="paper-header"] > [class="toolbar"] [class="menu"] a:hover {
-  background-color: #0080ff;
-  color: #ffffff;
-  opacity: 0.5;
-}
-[class="paper-header"] > [class="toolbar"] [class="language"] {
+  flex-shrink: 0;
   order: 1;
 }
-[class="paper-header"] > [class="toolbar"] [class="search"] {
-  flex-grow: 1;
-  order: 2;
-  justify-content: flex-end;
-}
-[class="paper-header"] > [class="toolbar"] [class="menu"] {
-  order: 3;
+[class="paper-content"] > [class="menu"] nav {
+  display: flex;
+  flex-flow: column;
+  justify-content: flex-start;
 }
 [class="paper-content"] > [class="main"] {
-  border: 1px solid red;
+  margin: 0 12px;
+  order: 2;
+}
+[class="paper-content"] > [class="main"] main {
   align-items: stretch;
   display: flex;
   flex-flow: row wrap;
   flex-shrink: 2;
   justify-content: space-around;
-  order: 2;
   position: relative;
 }
-[class="paper-content"] > [class="main"] > article {
+[class="paper-content"] > [class="main"] main > article {
   border: 1px solid #808080;
   border-radius: 12px;
   display: inline-block;
   margin: 8px;
   width: 300px;
 }
-[class="paper-content"] > [class="menu"] > nav {
-  border: 1px solid red;
-  display: flex;
-  flex-flow: column;
-  justify-content: flex-start;
-  order: 1;
-  min-width: 200px;
-}
-[class="paper-content"] > aside {
-  border: 1px solid red;
+[class="paper-content"] > [class="aside"] {
   order: 3;
-  width: 240px;
+  justify-content: space-around;
+  min-width: 80px;
+}
+[class="paper-content"] > * {
+  border: 0px solid red;
+}
+[class="paper-footer"] {
+  background-image: url("/templates/default/index/img/bg-footer-iasa-1.png");
+  background-position-y: top;
+  min-height: 100px;
 }
 .icon-lang {
   background-image: url("/templates/default/language/img/language.png");
   background-position: 19px 16px;
   background-repeat: no-repeat;
   border: 1px dotted transparent;
-  display: inline-block;
   height: 16px;
-  vertical-align: baseline;
   width: 19px;
+  display: inline-block;
+  vertical-align: baseline;
 }
 .active .icon-lang {
   border-color: red;
@@ -205,10 +227,10 @@ body {
   background-image: url("/templates/default/index/img/glyphicons-halflings.png");
   background-position: 14px 14px;
   background-repeat: no-repeat;
-  display: inline-block;
   height: 16px;
-  vertical-align: text-top;
   width: 19px;
+  display: inline-block;
+  vertical-align: text-top;
 }
 a:hover .icon-img {
   background-image: url("/templates/default/index/img/glyphicons-halflings-white.png");
