--- a/templates/default/index/css/style.less
+++ b/templates/default/index/css/style.less
@@ -1,147 +1,146 @@
+@mobile-width: 800px;
 
 html{
-	font:normal 14pt/1.4 Helvetica, "Helvetica Neue", Arial, Tahoma, Verdana, monospace;
-	height:100%;
-	&, & *{
-		margin:0px;
-		padding:0px;
-	}
+	font: normal 14pt/1.4 "Helvetica Neue", Helvetica, Arial, Tahoma, Verdana, monospace;
+	height: 100%;
+	&, & *{ margin: 0px; padding: 0px; }
 }
 
 
 body{
-	background:#FFFFFF url("/templates/default/index/img/bg-body-iasa-1.png") center -250px repeat-x;
-	height:100%;
+	background: #FFFFFF url("/templates/default/index/img/bg-body-iasa-1.png") center -250px repeat-x;
+	height: 100%;
+	a{ color: #0080ff; text-decoration: none; }
 }
 
 
 [class^="paper-"]{
-	background-position-x:center;
-	background-repeat:no-repeat;
-	border:1px solid violet;
-	margin:auto 64px;
-	min-height:32px;
-	position:relative;
+	border: 0px solid violet;
+	overflow: auto;
+	position: relative;
+	&{
+		background-position-x: center;
+		background-repeat: no-repeat;
+	}
+	&{
+		margin: auto 64px;
+		min-height: 32px;
+	}
 }
 [class="paper-header"]{
-	background-image:url("/templates/default/index/img/bg-header-iasa-1.png");
-	background-position-y:bottom;
-	min-height:32px;
+	&{ background-image: url("/templates/default/index/img/bg-header-iasa-1.png"); background-position-y: bottom; }
+	&{ border-bottom: 1px solid #808080 }
+	&{ min-height: 32px; }
+	&>[class="toolbar"]{
+		&{ background-color: #c9dbf4; border-radius: 0 0 12px 12px; }
+		&{ font-size: 75%; }
+		&{ align-items: stretch; display: flex; flex-flow: row-reverse wrap; justify-content: space-between; }
+		a{ padding: 4px 8px; }
+		button{ background: none; border: none; margin: 4px 2px; vertical-align: text-top; }
+		input{ border: 1px solid #808080; border-radius: 8px; margin: 2px; padding: 3px 4px 4px; vertical-align: text-top; }
+		&>[class="menu"],[class="language"],[class="search"] {
+			display: inline-flex;
+			flex-grow: 0;
+			flex-flow: row wrap;
+			justify-content: flex-start;
+			padding: 0 12px;
+		}
+		&>[class="language"] a:hover{ opacity: 0.5; }
+		&>[class="menu"] a:hover{ background-color: #0080ff; color: #ffffff; opacity: 0.5; }
+		&>[class="language"]{ order: 1; }
+		&>[class="search"]{ flex-grow: 1; order: 2; justify-content: flex-end; }
+		&>[class="menu"]{ order: 3; }
+	}
 	.face{
-		align-items:center;
-		display:flex;
-		flex-flow:row-reverse wrap;
-		justify-content:flex-end;
-		min-height:80px;
-		margin:16px 24px;
-		a{ text-decoration:none; }
-		img{ vertical-align:text-bottom; }
+		&{ align-items: center; display: flex; flex-flow: row-reverse wrap; justify-content: flex-end; }
+		&{ min-height: 80px; }
+		&{ margin: 16px 24px; }
+		a{ text-decoration: none; }
+		img{ vertical-align: text-bottom; }
+		.contact{
+			&{ align-items: flex-end; display: flex; justify-content: flex-start; order: 1; }
+			&{ flex-grow: 1; flex-flow: column wrap; }
+			label{ font-family: Palatino; font-size: 75%; font-style: italic; line-height: 1; }
+			.phone{ font-size: 140%; font-style: normal; font-weight: bold; margin-left: 1em; }
+		}
 		.logo-text{
-			display:flex;
-			flex-grow:0;
-			margin-right:24px;
-			order:2;
-			.logo{ margin-right:16px; }
+			&{ display: flex; flex-grow: 0; order: 2; }
+			&{ margin-right: 24px; }
+			.logo{ margin-right: 16px; }
 			.text{
 				font-family: Constantia, Georgia, serif;
-				span{ display:block; }
-				span:nth-child(1){ font-size:95%; font-style:italic; margin-left:1em; }
-				span:nth-child(2){ font-size:150%; font-weight:bolder; word-spacing:4px; }
+				span{ display: block; }
+				span:nth-child(1){ font-size: 95%; font-style: italic; margin-left: 1em; }
+				span:nth-child(2){ font-size: 150%; font-weight: bolder; word-spacing: 4px; }
 			}
-		}
-		.contact{
-			align-items:flex-end;
-			display:flex;
-			flex-grow:1;
-			flex-flow:column wrap;
-			justify-content:flex-start;
-			order:1;
-			label{ font-family:Palatino; font-size:75%; font-style:italic; line-height:1; }
-			.phone{ font-size:140%; font-style:normal; font-weight:bold; margin-left:1em; }
 		}
 	}
 }
 [class="paper-content"]{
-	align-items: flex-start;
-	display:flex;
-	flex-flow:row wrap;
-	justify-content: flex-start;
+	display: flex;
+	flex-flow: row nowrap;
+	@media (max-width: @mobile-width) {
+		flex-flow: column wrap;
+	}
+	margin-bottom: 8px;
+	margin-top: 8px;
+	&>[class="main"],&>[class="menu"],&>[class="aside"]{
+		display: flex;
+	}
+	&>[class="menu"]{
+		min-width: 80px;
+		&{ flex-grow: 0; flex-shrink: 0; order: 1; }
+		nav{
+			display: flex;
+			flex-flow: column;
+			justify-content: flex-start;
+		}
+	}
+	&>[class="main"]{
+		margin: 0 12px;
+		order: 2;
+		main{
+			align-items: stretch;
+			display: flex;
+			flex-flow: row wrap;
+			flex-shrink: 2;
+			justify-content: space-around;
+			position: relative;
+			&>article{
+				border: 1px solid #808080;
+				border-radius: 12px;
+				display: inline-block;
+				margin: 8px;
+				width: 300px;
+			}
+		}
+	}
+	&>[class="aside"]{
+		order: 3;
+		justify-content: space-around;
+		min-width: 80px;
+		aside{
+
+		}
+	}
+	&>*{ border: 0px solid red; }
 }
 [class="paper-footer"]{
 	background-image: url("/templates/default/index/img/bg-footer-iasa-1.png");
-	background-position-y:top;
-	min-height:100px;
+	background-position-y: top;
+	min-height: 100px;
 }
 
-
-[class="paper-header"]>[class="toolbar"]{
-	background-color:#c9dbf4;
-	border-radius:0 0 12px 12px;
-	font-size:75%;
-	&{
-		align-items:stretch;
-		display:flex;
-		flex-flow:row-reverse wrap;
-		justify-content:space-between;
-	}
-	a{ color:#0080ff; padding:4px 8px; text-decoration:none; }
-	button{ background:none; border:none; margin:4px 2px; vertical-align:text-top; }
-	input{ border:1px solid #808080; border-radius:8px; margin:2px; padding:3px 4px 4px; vertical-align:text-top; }
-	[class="menu"],[class="language"],[class="search"] {
-		display: inline-flex;
-		flex-grow: 0;
-		flex-flow: row wrap;
-		justify-content: flex-start;
-		padding: 0 12px;
-	}
-	[class="language"] a:hover{ opacity: 0.5; }
-	[class="menu"] a:hover{ background-color: #0080ff; color: #ffffff; opacity: 0.5; }
-	[class="language"]{ order: 1; }
-	[class="search"]{ flex-grow: 1; order: 2; justify-content: flex-end; }
-	[class="menu"]{ order: 3; }
-}
-
-
-[class="paper-content"]>[class="main"]{
-	border: 1px solid red;
-	align-items:stretch;
-	display:flex;
-	flex-flow:row wrap;
-	flex-shrink:2;
-	justify-content:space-around;
-	order:2;
-	position:relative;
-	&>article{
-		border:1px solid #808080;
-		border-radius:12px;
-		display:inline-block;
-		margin:8px;
-		width:300px;
-	}
-}
-[class="paper-content"]>[class="menu"]>nav{
-	border: 1px solid red;
-	display:flex;
-	flex-flow: column;
-	justify-content: flex-start;
-	order:1;
-	min-width:200px;
-}
-[class="paper-content"]>aside{
-	border: 1px solid red;
-	order:3;
-	width:240px;
-}
 
 .icon-lang{
-	background-image:url("/templates/default/language/img/language.png");
-	background-position:19px 16px;
-	background-repeat:no-repeat;
-	border:1px dotted transparent;
-	display:inline-block;
-	height:16px;
-	vertical-align:baseline;
-	width: 19px;
+	&{
+		background-image:url("/templates/default/language/img/language.png");
+		background-position:19px 16px;
+		background-repeat:no-repeat;
+		border:1px dotted transparent;
+	}
+	&{ height:16px; width: 19px; }
+	&{ display:inline-block; vertical-align:baseline; }
 	.active &{ border-color:red; }
 	&.lang-uk{ background-position:0 0; }
 	&.lang-en{ background-position:0 -16px; }
@@ -150,13 +149,13 @@ body{
 
 
 .icon-img{
-	background-image:url("/templates/default/index/img/glyphicons-halflings.png");
-	background-position:14px 14px;
-	background-repeat:no-repeat;
-	display:inline-block;
-	height:16px;
-	vertical-align:text-top;
-	width:19px;
+	&{
+		background-image:url("/templates/default/index/img/glyphicons-halflings.png");
+		background-position:14px 14px;
+		background-repeat:no-repeat;
+	}
+	&{ height:16px; width:19px; }
+	&{ display:inline-block; vertical-align:text-top; }
 	a:hover &{ background-image:url("/templates/default/index/img/glyphicons-halflings-white.png"); }
 	button:hover &{ background-image:url("/templates/default/index/img/glyphicons-halflings-white.png"); }
 	input:hover &{ background-image:url("/templates/default/index/img/glyphicons-halflings-white.png"); }
